tests/vertical-slice/accept/for_wildcard_range.hew
fn main() -> i64 {
    var count: i64 = 0;
    for _ in 0..3 {
        count = count + 1;
    }
    return count;
}
